# smart-agriculture-ml

./: .gitignore  main.py  pyproject.toml  requirements.txt  visual_data.py
config/: data_config.yaml  model_config.yaml
saved_models/: crop_yield_best.pth  market_price_best.pth  sustainability_best.pth
src/: data_loader.py  models.py  preprocessing.py  train.py
